2013-02-25  Paul Smith  <psmith@gnu.org>

	* run_make_tests.pl (valid_option): Support the -srcdir flag.
	(set_more_defaults): Set up $srcdir if it's not set yet.

	* scripts/functions/guile: Verify gmk-eval doesn't expand twice.
	* scripts/features/load: Rework to test just the load capability.
	* scripts/features/loadapi: New set of tests for the load API.

2013-01-19  Paul Smith  <psmith@gnu.org>

	* scripts/features/load: Test loaded files with and without "./"
	prefix.  Add tests for automatically rebuilding loaded files if
	they are out of date or non-existent.

2013-01-13  Paul Smith  <psmith@gnu.org>

	* scripts/features/archives: Add a check targets that have parens,
	but are not archives.  See Savannah bug #37878.

	* scripts/options/dash-n: Verify -n is preserved after recursive /
	re-exec.  See Savannah bug #38051.

2013-01-12  Paul Smith  <psmith@gnu.org>

	* scripts/features/parallelism: Change rule so it doesn't depend
	on invocation order, etc.

2012-10-29  Paul Smith  <psmith@gnu.org>

	* scripts/features/load: New test suite for the "load" directive.

2012-09-09  Paul Smith  <psmith@gnu.org>

	* scripts/functions/file: Get errors in the C locale, not the
	current locale.  Fixes Savannah bug #35764.

	* scripts/features/escape: Check that backslashes before
	non-special characters are not removed.

	* scripts/features/utf8: New test for UTF-8 support.
	See Savannah bug #36529.

	* scripts/targets/POSIX: Add tests for default macro values as
	specified by IEEE Std 1003.1-2008.  See Savannah bug #37069.

2012-03-04  Paul Smith  <psmith@gnu.org>

	* scripts/features/se_explicit: Test $(x:%=%) format in secondary
	expansion prerequisite lists.  See Savannah bug #16545.

	* scripts/features/escape: Test escaped ":" in prerequisite lists.
	See Savannah bug #12126.

	* scripts/variables/private: Test appending private variables in
	pattern-specific target rules.  See Savannah bug #35468.

2012-03-03  Paul Smith  <psmith@gnu.org>
