@@ -1,3 +1,11 @@
+2013-04-14  Paul Smith  <psmith@gnu.org>
+
+	* test_driver.pl (_run_command): Don't set SIGALRM until after we
+	start the child.  Print errors to the top-level output, which will
+	be stderr.
+	(attach_default_output): Use a list of file handles as the stack.
+	(detach_default_output): Ditto.
+
 2013-02-25  Paul Smith  <psmith@gnu.org>
 
 	* run_make_tests.pl (valid_option): Support the -srcdir flag.
